--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,61 @@
-body{
-    background-color: white;
+body {
+    background-color: rgb(231, 234, 232);
     color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+}
+
+header img {
+    padding: 10px;
+}
+
+header {
+    display: inline;
+    text-align: center;
+}
+
+header h1 {
+    text-align: center;
+}
+
+label {
+    display: inline-flex;
+}
+
+img, p {
+    display: inline-block;
+}
+
+h2, h3 {
+    text-align: center;
+}
+
+div {
+    margin: 8px;
+    border: 2px solid black;
+    background-color:rgb(216, 216, 216)
+}
+
+div p {
+    margin: auto;
+    padding: 5%;
+}
+
+div img {
+    padding: 10px;
+    width: 20%;
+    vertical-align: middle;
+}
+
+footer {
+    display: inline-flex;
+    color: white;
+    width: 100%;
+    height: 50px;
+    border: 2px solid black;
+    background-color:rgb(216, 216, 216)
+}
+
+footer a {
+    margin: auto;
 }
